---------------------------------------------------------------------------
Version 4.3.1  [DEVEL] (rgerhards), 2009-04-??
- improved doc
  * added (hopefully) easier to grasp queue explanation
- improved testbench
  * added tests for queue disk-only mode (checks disk queue logic)
- bugfix: light and full delay watermarks had invalid values, badly
  affecting performance for delayable inputs
---------------------------------------------------------------------------
Version 4.3.0  [DEVEL] (rgerhards), 2009-04-17
- new feature: new output plugin omprog, which permits to start program
  and feed it (via its stdin) with syslog messages. If the program
  terminates, it is restarted.
- improved internal handling of RainerScript functions, building the
  necessary plumbing to support more functions with decent runtime
  performance. This is also necessary towards the long-term goal
  of loadable library modules.
- added new RainerScript function "tolower"
- improved testbench
  * added tests for tcp-based reception
  * added tcp-load test (1000 connections, 20,000 messages)
- added $MaxOpenFiles configuration directive
- bugfix: solved potential memory leak in msg processing, could manifest
  itself in imtcp
- bugfix: ompgsql did not detect problems in sql command execution
  this could cause loss of messages. The handling was correct if the
  connection broke, but not if there was a problem with statement
  execution. The most probable case for such a case would be invalid
  sql inside the template, and this is now much easier to diagnose.
---------------------------------------------------------------------------
Version 4.1.8  [BETA] (rgerhards), 2009-04-??
- bugfix: light and full delay watermarks had invalid values, badly
  affecting performance for delayable inputs
- bugfix: compile problems in im3195
---------------------------------------------------------------------------
Version 4.1.7  [BETA] (rgerhards), 2009-04-22