@@ -16,6 +16,8 @@ $MainMsgQueueLowWatermark 40
 $MainMsgQueueFilename mainq
 $MainMsgQueueType linkedlist
 $MainMsgQueueDeqzezeSlowdown 1000
+# ucomment, as we now have an issue (finally the test case works ;))
+#$MainMsgQueueDequeueBatchSize 80
 
 $template outfmt,"%msg:F,58:2%\n"
 $template dynfile,"rsyslog.out.log" # trick to use relative path names!
